lib_LTLIBRARIES = libconcrete-connection-pool.la
libconcrete_connection_pool_la_LDFLAGS = -version-info 1:0:0
libconcrete_connection_pool_la_SOURCES = \
    ConcreteMySqlFactory.cpp \
    ConcreteMySqlConnection.cpp

nobase_include_HEADERS = \
    ConcreteMySqlConnection.h \
    ConcreteMySqlFactory.h \
    ConcreteMySqlPool.h
